# FXIMU

./: CMakeLists.txt  package.xml
calibration_firmware/: CMakeLists.txt  calibration_firmware.cpp
config/: fximu_params.yaml
include/: common.h  fxas21002c.c  fxas21002c.h  fxas21002c_proc.h  fxas21002c_tiva.c  fximu.h  fxos8700cq.c  fxos8700cq.h  fxos8700cq_proc.h  fxos8700cq_tiva.c
launch/: comparison.launch  complementary.launch  madgwick.launch
launch/rviz/: imu_compare.rviz  imu_complementary.rviz  imu_madgwick.rviz
msg/: SensorData.msg
ros_fximu/: CMakeLists.txt  ros_fximu.cpp  ros_fximu.h
scripts/: imu_bridge.py
